--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Política de Privacidad - Sevilla OnAir</title>
+    <title>Política de Privacidad de Sagon - Sevilla OnAir</title>
     <style>
         body { font-family: sans-serif; line-height: 1.6; color: #333; max-width: 800px; margin: 0 auto; padding: 20px; }
         h1 { color: #00CED1; }
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-    <h1>Política de Privacidad de Sevilla OnAir</h1>
+    <h1>Política de Privacidad de Sagón,Sevilla OnAir</h1>
     <p>Fecha de última actualización: 24 de mayo de 2024</p>
 
     <p>Sevilla OnAir ("nosotros", "nuestro" o "la Aplicación") se compromete a proteger la privacidad de sus usuarios. Esta política describe cómo manejamos la información en nuestra aplicación móvil estilo Walkie-Talkie.</p>
