--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-    <h1>Política de Privacidad de Sagón,Sevilla OnAir</h1>
+    <h1>Política de Privacidad  Sagón - Sevilla OnAir</h1>
     <p>Fecha de última actualización: 24 de mayo de 2024</p>
 
     <p>Sagón ("nosotros", "nuestro" o "la Aplicación") se compromete a proteger la privacidad de sus usuarios. Esta política describe cómo manejamos la información en nuestra aplicación móvil estilo Walkie-Talkie.</p>
