--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <p>Podemos actualizar nuestra Política de Privacidad periódicamente. Se aconseja revisar esta página con regularidad para comprobar si se han producido cambios.</p>
 
     <h2>8. Contacto</h2>
-    <p>Si tiene alguna pregunta o sugerencia sobre nuestra Política de Privacidad, no dude en contactarnos a través de la Google Play Console o al correo electrónico de soporte proporcionado en la ficha de la aplicación Appsaiber@gmail.com.</p>
+    <p>Si tiene alguna pregunta o sugerencia sobre nuestra Política de Privacidad, no dude en contactarnos a través de la Google Play Console o al correo electrónico de soporte proporcionado en la ficha de la aplicación - (Appsaiber@gmail.com).</p>
 
 </body>
 </html>
