--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <h2>2. Eliminación de Cuenta y Datos</h2>
         <p>Usted tiene el derecho de eliminar su perfil y todos los datos asociados en cualquier momento.</p>
         <p><strong>Desde la aplicación:</strong> Vaya al menú superior y pulse el botón <strong>"BORRAR NICK"</strong>. Esto eliminará instantáneamente su apodo, Karma y XP de nuestros servidores.</p>
-        <p><strong>Solicitud vía Web:</strong> Si ya no tiene instalada la aplicación y desea que eliminemos su Nick de forma manual, envíe un correo electrónico a <strong>TU_CORREO_AQUÍ@gmail.com</strong> indicando su Nick. Procesaremos la eliminación en un plazo máximo de 48 horas.</p>
+        <p><strong>Solicitud vía Web:</strong> Si ya no tiene instalada la aplicación y desea que eliminemos su Nick de forma manual, envíe un correo electrónico a <strong>appsaiber@gmail.com</strong> indicando su Nick. Procesaremos la eliminación en un plazo máximo de 48 horas.</p>
     </div>
 
     <h2>3. Seguridad</h2>
