--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Política de Privacidad - Sevilla OnAir</title>
     <style>
         body { font-family: 'Segoe UI', Tahoma, sans-serif; line-height: 1.6; color: #333; max-width: 850px; margin: 0 auto; padding: 30px; background-color: #fcfcfc; }
@@ -36,19 +35,22 @@
         <li><strong>Seguimiento:</strong> Sistema interno de avisos entre usuarios basado exclusivamente en Nicks.</li>
         <li><strong>Bloqueo:</strong> Herramienta para silenciar y ocultar a cualquier usuario molesto al instante.</li>
     </ul>
-
+    
     <h2>3. Uso del Micrófono y Notificaciones</h2>
     <p>La aplicación requiere permiso de micrófono para la comunicación por voz (PTT/VOX). Las notificaciones se utilizan para avisarle cuando sus amigos seguidos entran en el aire.</p>
 
+    <h2>4. Proveedores de Terceros y Servicios de Audio</h2>
+    <p>Para garantizar una comunicación de voz profesional y de alta fidelidad, Sevilla OnAir integra el SDK de <strong>Jitsi Meet (desarrollado por 8x8, Inc.)</strong>. Este servicio facilita la conexión técnica entre usuarios. Jitsi procesa de forma efímera los datos necesarios para la transmisión (como la dirección IP), pero en ningún caso Sevilla OnAir ni Jitsi graban, escuchan o almacenan el contenido de sus conversaciones.</p>
+
     <div class="alert">
-        <h2>4. Seguridad Infantil (EASI)</h2>
+        <h2>5. Seguridad Infantil (EASI)</h2>
         <p>Sevilla OnAir mantiene una política de <strong>tolerancia cero</strong> contra la explotación infantil. Prohibido transmitir contenido inapropiado con menores. Los infractores serán expulsados mediante bloqueo permanente de ID.</p>
     </div>
 
-    <h2>5. Eliminación de Datos</h2>
+    <h2>6. Eliminación de Datos</h2>
     <p>Usted puede eliminar su perfil (Nick, Karma, XP) al instante usando el botón <strong>"BORRAR NICK"</strong> en ajustes o contactando con <strong>appsaiber@gmail.com</strong>.</p>
 
-    <h2>6. Suscripción Anual y Servicios VIP</h2>
+    <h2>7. Suscripción Anual y Servicios VIP</h2>
     <p>Sevilla OnAir ofrece una modalidad de suscripción anual que otorga acceso a funciones avanzadas para mejorar la experiencia de radio y personalización:</p>
     <ul>
         <li><strong>Personalización Estética:</strong> Acceso a fondos de pantalla exclusivos de Sevilla y sus barrios.</li>
