--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Política de Privacidad - Sevilla OnAir</title>
     <style>
         body { font-family: 'Segoe UI', Tahoma, sans-serif; line-height: 1.6; color: #333; max-width: 850px; margin: 0 auto; padding: 30px; background-color: #fcfcfc; }
@@ -26,40 +27,27 @@
         <li><strong>Apodo (Nick):</strong> Identificador público elegido por usted. Se almacena en Google Firebase para gestionar su perfil (Karma y XP).</li>
         <li><strong>Voz en tiempo real:</strong> El audio es <strong>efímero</strong>; se procesa para la comunicación y no se almacena permanentemente.</li>
         <li><strong>Identificadores de Dispositivo:</strong> Se utilizan para vincular su Nick a su terminal de forma segura y prevenir abusos.</li>
-        <li><strong>Datos de Suscripción:</strong> Compras VIP gestionadas de forma segura por Google Play Billing.</li>
     </ul>
 
-    <h2>2. Control de Privacidad y Social</h2>
+    <h2>2. Proveedores de Terceros y Servicios de Audio (Jitsi)</h2>
+    <p>Para garantizar una comunicación de voz profesional y de alta fidelidad, Sevilla OnAir integra el SDK de <strong>Jitsi Meet (desarrollado por 8x8, Inc.)</strong>. Este servicio facilita la conexión técnica de audio WebRTC entre usuarios. Jitsi procesa de forma efímera los datos necesarios para la transmisión (como la dirección IP), pero en ningún caso Sevilla OnAir ni Jitsi graban, escuchan o almacenan el contenido de sus conversaciones.</p>
+
+    <h2>3. Control de Privacidad y Social</h2>
     <ul>
         <li><strong>Botón GHOST:</strong> Modo invisible que impide notificar su conexión a sus seguidores.</li>
-        <li><strong>Seguimiento:</strong> Sistema interno de avisos entre usuarios basado exclusivamente en Nicks.</li>
         <li><strong>Bloqueo:</strong> Herramienta para silenciar y ocultar a cualquier usuario molesto al instante.</li>
     </ul>
-    
-    <h2>3. Uso del Micrófono y Notificaciones</h2>
-    <p>La aplicación requiere permiso de micrófono para la comunicación por voz (PTT/VOX). Las notificaciones se utilizan para avisarle cuando sus amigos seguidos entran en el aire.</p>
-
-    <h2>4. Proveedores de Terceros y Servicios de Audio</h2>
-    <p>Para garantizar una comunicación de voz profesional y de alta fidelidad, Sevilla OnAir integra el SDK de <strong>Jitsi Meet (desarrollado por 8x8, Inc.)</strong>. Este servicio facilita la conexión técnica entre usuarios. Jitsi procesa de forma efímera los datos necesarios para la transmisión (como la dirección IP), pero en ningún caso Sevilla OnAir ni Jitsi graban, escuchan o almacenan el contenido de sus conversaciones.</p>
 
     <div class="alert">
-        <h2>5. Seguridad Infantil (EASI)</h2>
+        <h2>4. Seguridad Infantil (EASI)</h2>
         <p>Sevilla OnAir mantiene una política de <strong>tolerancia cero</strong> contra la explotación infantil. Prohibido transmitir contenido inapropiado con menores. Los infractores serán expulsados mediante bloqueo permanente de ID.</p>
     </div>
 
-    <h2>6. Eliminación de Datos</h2>
+    <h2>5. Eliminación de Datos</h2>
     <p>Usted puede eliminar su perfil (Nick, Karma, XP) al instante usando el botón <strong>"BORRAR NICK"</strong> en ajustes o contactando con <strong>appsaiber@gmail.com</strong>.</p>
 
-    <h2>7. Suscripción Anual y Servicios VIP</h2>
-    <p>Sevilla OnAir ofrece una modalidad de suscripción anual que otorga acceso a funciones avanzadas para mejorar la experiencia de radio y personalización:</p>
-    <ul>
-        <li><strong>Personalización Estética:</strong> Acceso a fondos de pantalla exclusivos de Sevilla y sus barrios.</li>
-        <li><strong>Audio Profesional:</strong> Selección de tonos de cortesía (Roger Beeps) y efecto de eco ajustable para transmisiones realistas.</li>
-        <li><strong>Funciones de Manos Libres:</strong> Capacidad de uso en modo manos libres para mayor comodidad durante el trabajo o la conducción.</li>
-        <li><strong>Tiempo de Transmisión Extendido:</strong> Ampliación del tiempo máximo de PTT hasta 60 segundos por mensaje.</li>
-        <li><strong>Modo Ghost:</strong> Privacidad total para seguidores.</li>
-    </ul>
-    <p>Estas suscripciones se gestionan de forma segura a través de <strong>Google Play Billing</strong>. No almacenamos datos de pago personales en nuestros servidores.</p>
+    <h2>6. Servicios VIP y Google Play Billing</h2>
+    <p>Las suscripciones VIP se gestionan de forma segura a través de <strong>Google Play Billing</strong>. No almacenamos datos de pago personales en nuestros servidores. Las funciones VIP incluyen efectos de audio (Eco/Roger Beeps), Manos libres (VOX) y Modo Ghost.</p>
 
     <div class="footer">
         Cumple con los requisitos de Google Play Store y el RGPD. <br>
